# www

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  components.json  docker-compose.yml.bak.port  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx
app/(dashboard)/: layout.tsx
app/login/: page.tsx
app/providers/: auth-provider.tsx  color-theme-provider.tsx  locale-provider.tsx  preferences-sync.tsx  provider.tsx  theme-provider.tsx
assistant/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
assistant/app/: __init__.py  config.py  home.py  llm.py  main.py  nlu.py  stt.py  tts.py  voice.py
assistant/scripts/: run.sh
config/: runtime.json  runtime.json.bak  runtime.secrets.json.example
deploy/: Caddyfile
features/mobile-shell/: useEdgeSwipe.ts
features/voice-assistant/: speech.d.ts
i18n/: config.ts  messages.ts  request.ts
messages/: _keys.txt  ar.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  pt.json  ru.json  validate_messages.py  zh.json
public/: manifest.webmanifest  sw.js
scripts/: install-https.sh  install-mdns.sh  publish-manager.py  publish-manager.sh  seed-user.mjs  ship.sh  up.sh  use-remote-supabase.sh
shared/config/: catalog.ts  ha-catalog.ts  matrix.ts  navigation.ts  runtime.server.ts  runtime.ts  themes.ts  views.ts
shared/lib/: iotvex-proto.ts  stack-radius.ts  ui-view-prefs.ts  user-preferences.ts
shared/ui/: app-link.tsx  badge.tsx  brand-mark.tsx  (+19 more)
supabase/: config.toml  seed.sql
(+95 files in other folders)
